--- a/SampleProject/Sample/Components/ParentComponent.razor
+++ b/SampleProject/Sample/Components/ParentComponent.razor
@@ -7,6 +7,8 @@
     <Defer>
         @{
             FinishCollectingChildren();
+
+            ProcessDataAsync();
         }
 
         @foreach (var o in _childComponents)
